Updated `/channels` paths
