# chat-service/src/api/swagger.yaml
@@ -7,93 +7,151 @@ info:
 servers: 
   - url: "http://localhost:8810"
 tags:
-  - name: "user"
+  - name: "channels"
     description: "Operations about user"
 
 paths:
-  /:
+  /channels:
     x-router-controller: routes.config
     get:
-      operationId: defaultRoute
-      summary: "Check server's avilablity"
-      responses:
-        "200":
-          description: "Response OK"
-
-  /users/test:
-    x-router-controller: routes.config
-    get:
-      operationId: testRequest
+      tags:
+        - channels
+      
+      operationId: getAvailableChannels_R
       summary: Test request for checking the user component, don't forget to change it or delete it
       responses:
-        "200":
+        200:
           description: "Request ran successfuly"
 
-  # /users/login:
-  #   post:
-  #     tags:
-  #       - "user"
-  #     summary: "Logs user into the system"
-  #     operationId: "loginUser"
-  #     produces:
-  #       - "application/json"
-  #     parameters:
-  #       - in: "body"
-  #         name: "body"
-  #         description: User's username and password
-  #         required: true
-  #         schema:
-  #           $ref: "#/definitions/UserLoginObj"
-  #     responses:
-  #       "200":
-  #         description: "successful operation"
-  #         schema:
-  #           $ref: "#/definitions/LoginResponseObj"
-  #       "400":
-  #         description: "Invalid username/password supplied"
-  # /users/sign-up:
-  #   post:
-  #     tags:
-  #       - "user"
-  #     summary: "Signing up new user"
-  #     operationId: "signup-user"
-  #     produces:
-  #       - "application/json"
-  #     parameters:
-  #       - in: "body"
-  #         name: "body"
-  #         description: New user data
-  #         required: true
-  #         schema:
-  #           $ref: "#/definitions/User"
-  #     responses:
-  #       "200":
-  #         description: "User created successfuly"
-  #         schema:
-  #           $ref: "#/definitions/ApiResponse"
-  #       "500":
-  #         description: "There is a problem with creating the user"
-  # /users/return-something:
-  #   get:
-  #     tags:
-  #       - "user"
-  #     summary: "Do something"
-  #     produces:
-  #       - "application/json"
-  #     responses:
-  #       "200": 
-  #         schema:
-  #           $ref: "#definitions/ReturnObj"
+  /channel:
+    x-router-controller: routes.config
+    post:
+      tags:
+        - channels
+      
+      operationId: createChannel_R
+      summary: Add new channel
+
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Channel'
+
+      responses:
+        201:
+          description: 'Channel created successfully'
         
-# securityDefinitions:
-#   petstore_auth:
-#     type: "oauth2"
-#     authorizationUrl: "http://petstore.swagger.io/oauth/dialog"
-#     flow: "implicit"
-#     scopes:
-#       write:pets: "modify pets in your account"
-#       read:pets: "read your pets"
-#   api_key:
-#     type: "apiKey"
-#     name: "api_key"
-#     in: "header"
+        500:
+          description: 'Internal server error'
+
+  /channel/{channelID}:
+    x-router-controller: routes.config
+    get:
+      tags:
+        - channels
+      
+      operationId: getChannelByID_R
+      summary: Get channel info by it's id
+
+      parameters:
+        - in: path
+          name: channelID
+          required: true
+          schema:
+            type: string
+
+      responses:
+        200: 
+          description: 'channel info'
+        
+        500:
+          description: 'Internal server error'
+
+    put:
+      tags:
+        - channels
+
+      operationId: editChannelByID_R
+      summary: Edit existing channel by it's ID
+
+      parameters:
+        - in: path
+          name: channelID
+          required: true
+          schema:
+            type: string
+
+      responses:
+        200: 
+          description: 'Channel updated successfully'
+        
+        500:
+          description: 'Internal server error'
+
+    delete:
+      tags:
+        - channels
+
+      operationId: deleteChannelByID_R
+      summary: Delete channel by it's ID
+
+      parameters:
+        - in: path
+          name: channelID
+          required: true
+          schema:
+            type: string
+
+      responses:
+        200:
+          description: Delete succeeded
+
+        500:
+          description: Internal server error
+
+  /channel/{channelID}/message:
+    x-router-controller: routes.config
+    post:
+      tags:
+        - channels
+        
+      operationId: postNewMessage_R
+      summary: Post new message into a channel
+      parameters:
+        - in: path
+          name: channelID
+          required: true
+          schema:
+            type: string
+
+      responses:
+        201:
+          description: 'Message sent successfully'
+        
+        500:
+          description: 'Internal server error'
+
+  /health:
+    x-router-controller: routes.config
+    get:
+      operationId: health_R
+      summary: "Check server's avilablity"
+      responses:
+        200:
+          description: "Response OK"
+
+components:
+  schemas:
+    Channel:
+      type: object
+      required:
+        - name
+
+      properties:
+        name:
+          type: string
+        profileImageURL: 
+          type: string
+        info: 
+          type: string
